[metadata]
name = sopel-topicmgr
version = 0.1.0
description = Extensible topic-management plugin for Sopel IRC bots.
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/dgw/sopel-topicmgr
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=8.0.0.dev0,<9

[options.entry_points]
sopel.plugins =
    topicmgr = sopel_topicmgr
sopel_topicmgr.providers =
    wip = sopel_topicmgr:WIPProjectProvider
